--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-09-21 19:30:22 -0400</span>
+          <span class='datetime'>2009-09-30 13:08:28 -0400</span>
         </div>
       </div>
       <div id='content'>
@@ -41,7 +41,10 @@
             BENELUX, CHANGES
             </p>
             <p>
-            #### 0.2.0 (2009-09-??) ###############################
+            #### 0.3.0 (2009-09-30) ###############################
+            </p>
+            <p>
+            Initial public release
             </p>
           </div>
           <div id='section'>
