--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -11,7 +11,9 @@
       <h1>Classes</h1>
       <ol class='classes' id='index-entries'>
         <li><a href="classes/Benelux.html">Benelux</a>
-        <ol><li><a href="classes/Benelux/BeneluxError.html"><span class="parent">Benelux::</span>BeneluxError</a></li><li><a href="classes/Benelux/Mark.html"><span class="parent">Benelux::</span>Mark</a></li><li><a href="classes/Benelux/NotSupported.html"><span class="parent">Benelux::</span>NotSupported</a></li><li><a href="classes/Benelux/Timeline.html"><span class="parent">Benelux::</span>Timeline</a></li>
+        <ol><li><a href="classes/Benelux/BeneluxError.html"><span class="parent">Benelux::</span>BeneluxError</a></li><li><a href="classes/Benelux/Mark.html"><span class="parent">Benelux::</span>Mark</a></li><li><a href="classes/Benelux/NoTrack.html"><span class="parent">Benelux::</span>NoTrack</a></li><li><a href="classes/Benelux/NotSupported.html"><span class="parent">Benelux::</span>NotSupported</a></li><li><a href="classes/Benelux/Range.html"><span class="parent">Benelux::</span>Range</a></li><li><a href="classes/Benelux/Stats.html"><span class="parent">Benelux::</span>Stats</a>
+        <ol><li><a href="classes/Benelux/Stats/Calculator.html"><span class="parent">Benelux::Stats::</span>Calculator</a></li><li><a href="classes/Benelux/Stats/Group.html"><span class="parent">Benelux::Stats::</span>Group</a></li>
+        </ol></li><li><a href="classes/Benelux/TagHelpers.html"><span class="parent">Benelux::</span>TagHelpers</a></li><li><a href="classes/Benelux/Tags.html"><span class="parent">Benelux::</span>Tags</a></li><li><a href="classes/Benelux/Timeline.html"><span class="parent">Benelux::</span>Timeline</a></li>
         </ol></li><li><a href="classes/Thread.html">Thread</a></li>
       </ol>
     </div>
