--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -16,6 +16,9 @@
         <li class='other'><a href="files/lib/benelux_rb.html">lib/benelux.rb</a></li>
         <li class='other'><a href="files/lib/benelux/mark_rb.html">lib/benelux/mark.rb</a></li>
         <li class='other'><a href="files/lib/benelux/mixins/thread_rb.html">lib/benelux/mixins/thread.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/range_rb.html">lib/benelux/range.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/stats_rb.html">lib/benelux/stats.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/tags_rb.html">lib/benelux/tags.rb</a></li>
         <li class='other'><a href="files/lib/benelux/timeline_rb.html">lib/benelux/timeline.rb</a></li>
         <li>
           <a class='show' href='#' onclick='this.parentNode.parentNode.className += " expanded"; this.parentNode.removeChild(this); return false'>show all</a>
