--- a/classes/Benelux/NoTrack.html
+++ b/classes/Benelux/NoTrack.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: benelux.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>: Benelux::NoTrack [Benelux: Little freakin' timers for your Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -23,35 +23,24 @@
     </script>
   </head>
   <body class='page'>
-    <div class='file' id='wrapper'>
+    <div class='class' id='wrapper'>
       <div class='header'>
-        <h1 class='name'>benelux.rb</h1>
-        <div class='paths'>
-          lib/benelux.rb
-        </div>
-        <div class='last-update'>
-          Last Update:
-          <span class='datetime'>2009-09-30 13:08:49 -0400</span>
+        <h1 class='name'>
+          <span class='type'>Class</span>
+          Benelux::NoTrack
+        </h1>
+        <ol class='paths'>
+          <li>
+            <a href="../../files/lib/benelux_rb.html">lib/benelux.rb</a>
+          </li>
+        </ol>
+        <div class='parent'>
+          Parent:
+          <strong><a href="BeneluxError.html">Benelux::BeneluxError</a></strong>
         </div>
       </div>
       <div id='content'>
         <div id='text'>
-          <div id='context'>
-            <div id='requires'>
-              <h2>Required files</h2>
-              <ol>
-                <li>attic</li>
-                <li>hexoid</li>
-                <li>thread</li>
-                <li>benelux/tags</li>
-                <li>benelux/mark</li>
-                <li>benelux/range</li>
-                <li>benelux/stats</li>
-                <li>benelux/timeline</li>
-                <li>benelux/mixins/thread</li>
-              </ol>
-            </div>
-          </div>
           <div id='section'>
           </div>
         </div>
