--- a/files/lib/benelux/range_rb.html
+++ b/files/lib/benelux/range_rb.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: benelux.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>File: range.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-    <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
+    <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
         function popupCode(url) {
@@ -25,33 +25,17 @@
   <body class='page'>
     <div class='file' id='wrapper'>
       <div class='header'>
-        <h1 class='name'>benelux.rb</h1>
+        <h1 class='name'>range.rb</h1>
         <div class='paths'>
-          lib/benelux.rb
+          lib/benelux/range.rb
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-09-30 13:08:49 -0400</span>
+          <span class='datetime'>2009-09-30 06:08:21 -0400</span>
         </div>
       </div>
       <div id='content'>
         <div id='text'>
-          <div id='context'>
-            <div id='requires'>
-              <h2>Required files</h2>
-              <ol>
-                <li>attic</li>
-                <li>hexoid</li>
-                <li>thread</li>
-                <li>benelux/tags</li>
-                <li>benelux/mark</li>
-                <li>benelux/range</li>
-                <li>benelux/stats</li>
-                <li>benelux/timeline</li>
-                <li>benelux/mixins/thread</li>
-              </ol>
-            </div>
-          </div>
           <div id='section'>
           </div>
         </div>
