--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-10-01 15:50:36 -0400</span>
+          <span class='datetime'>2009-10-02 16:12:47 -0400</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,22 @@
             <p>
             BENELUX, CHANGES
             </p>
+            <p>
+            #### 0.3.2 (2009-10-02) ###############################
+            </p>
+            <ul>
+            <li>CHANGE: Major performance improvement.
+            
+            </li>
+            </ul>
+            <p>
+            #### 0.3.1 (2009-09-30) ###############################
+            </p>
+            <ul>
+            <li>FIXED: Rubygems versioning issue.
+            
+            </li>
+            </ul>
             <p>
             #### 0.3.0 (2009-09-30) ###############################
             </p>
