--- a/files/lib/benelux_rb.html
+++ b/files/lib/benelux_rb.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-10-02 16:12:54 -0400</span>
+          <span class='datetime'>2009-10-06 15:10:41 -0400</span>
         </div>
       </div>
       <div id='content'>
@@ -43,12 +43,18 @@
                 <li>attic</li>
                 <li>hexoid</li>
                 <li>thread</li>
-                <li>benelux/tags</li>
+                <li>thwait</li>
+                <li>selectable</li>
                 <li>benelux/mark</li>
+                <li>benelux/count</li>
+                <li>benelux/track</li>
                 <li>benelux/range</li>
                 <li>benelux/stats</li>
+                <li>benelux/packer</li>
+                <li>benelux/reporter</li>
                 <li>benelux/timeline</li>
                 <li>benelux/mixins/thread</li>
+                <li>benelux/mixins/symbol</li>
               </ol>
             </div>
           </div>
