--- a/classes/Benelux/UnknownTrack.html
+++ b/classes/Benelux/UnknownTrack.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>: Benelux::NoTrack [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>: Benelux::UnknownTrack [Benelux: Little freakin' timers for your Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -27,7 +27,7 @@
       <div class='header'>
         <h1 class='name'>
           <span class='type'>Class</span>
-          Benelux::NoTrack
+          Benelux::UnknownTrack
         </h1>
         <ol class='paths'>
           <li>
