--- a/files/lib/benelux/count_rb.html
+++ b/files/lib/benelux/count_rb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: stats.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>File: count.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -25,13 +25,13 @@
   <body class='page'>
     <div class='file' id='wrapper'>
       <div class='header'>
-        <h1 class='name'>stats.rb</h1>
+        <h1 class='name'>count.rb</h1>
         <div class='paths'>
-          lib/benelux/stats.rb
+          lib/benelux/count.rb
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-10-06 10:25:24 -0400</span>
+          <span class='datetime'>2009-10-04 14:49:10 -0400</span>
         </div>
       </div>
       <div id='content'>
