--- a/files/lib/selectable_rb.html
+++ b/files/lib/selectable_rb.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: stats.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>File: selectable.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-    <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
+    <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
         function popupCode(url) {
@@ -25,17 +25,35 @@
   <body class='page'>
     <div class='file' id='wrapper'>
       <div class='header'>
-        <h1 class='name'>stats.rb</h1>
+        <div class='name'>selectable.rb</div>
         <div class='paths'>
-          lib/benelux/stats.rb
+          lib/selectable.rb
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-10-06 10:25:24 -0400</span>
+          <span class='datetime'>2009-10-06 08:57:55 -0400</span>
         </div>
       </div>
       <div id='content'>
         <div id='text'>
+          <div id='description'>
+            <h1><a href="../../classes/Selectable.html">Selectable</a></h1>
+            <p>
+            <strong>Note: Classes that include <a
+            href="../../classes/Selectable.html">Selectable</a> must also subclass
+            Array</strong>
+            </p>
+            <pre>class Something &lt; Array&#x000A;  include Selectable&#x000A;end</pre>
+          </div>
+          <div id='context'>
+            <div id='requires'>
+              <h2>Required files</h2>
+              <ol>
+                <li>selectable/tags</li>
+                <li>selectable/object</li>
+              </ol>
+            </div>
+          </div>
           <div id='section'>
           </div>
         </div>
