--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -14,12 +14,20 @@
         <li><a href="files/LICENSE_txt.html">LICENSE.txt</a></li>
         <li><a href="files/README_rdoc.html">README.rdoc</a></li>
         <li class='other'><a href="files/lib/benelux_rb.html">lib/benelux.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/count_rb.html">lib/benelux/count.rb</a></li>
         <li class='other'><a href="files/lib/benelux/mark_rb.html">lib/benelux/mark.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/mixins/symbol_rb.html">lib/benelux/mixins/symbol.rb</a></li>
         <li class='other'><a href="files/lib/benelux/mixins/thread_rb.html">lib/benelux/mixins/thread.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/packer_rb.html">lib/benelux/packer.rb</a></li>
         <li class='other'><a href="files/lib/benelux/range_rb.html">lib/benelux/range.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/reporter_rb.html">lib/benelux/reporter.rb</a></li>
         <li class='other'><a href="files/lib/benelux/stats_rb.html">lib/benelux/stats.rb</a></li>
-        <li class='other'><a href="files/lib/benelux/tags_rb.html">lib/benelux/tags.rb</a></li>
         <li class='other'><a href="files/lib/benelux/timeline_rb.html">lib/benelux/timeline.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/track_rb.html">lib/benelux/track.rb</a></li>
+        <li class='other'><a href="files/lib/selectable_rb.html">lib/selectable.rb</a></li>
+        <li class='other'><a href="files/lib/selectable/global_rb.html">lib/selectable/global.rb</a></li>
+        <li class='other'><a href="files/lib/selectable/object_rb.html">lib/selectable/object.rb</a></li>
+        <li class='other'><a href="files/lib/selectable/tags_rb.html">lib/selectable/tags.rb</a></li>
         <li>
           <a class='show' href='#' onclick='this.parentNode.parentNode.className += " expanded"; this.parentNode.removeChild(this); return false'>show all</a>
         </li>
