--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-10-06 15:11:20 -0400</span>
+          <span class='datetime'>2009-10-06 19:45:47 -0400</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,17 @@
             <p>
             BENELUX, CHANGES
             </p>
+            <p>
+            #### 0.4.2 (2009-10-06) ###############################
+            </p>
+            <ul>
+            <li>ADDED: JRuby support
+            
+            </li>
+            <li>CHANGE: Improved performance
+            
+            </li>
+            </ul>
             <p>
             #### 0.4.1 (2009-10-06) ###############################
             </p>
