--- a/classes/Benelux/MethodCounter.html
+++ b/classes/Benelux/MethodCounter.html
@@ -45,9 +45,9 @@
             <h2>Methods</h2>
             <h3>public instance</h3>
             <ol>
-              <li><a href="#M000051">determine_count</a></li>
-              <li><a href="#M000050">generate_packed_method</a></li>
-              <li><a href="#M000049">install_method</a></li>
+              <li><a href="#M000068">determine_count</a></li>
+              <li><a href="#M000067">generate_packed_method</a></li>
+              <li><a href="#M000066">install_method</a></li>
             </ol>
           </div>
           <div id='section'>
@@ -65,43 +65,43 @@
             </div>
             <div id='methods'>
               <h2>Public instance methods</h2>
-              <div class='public-instance method' id='method-M000051'>
-                <a name='M000051'>      </a>
+              <div class='public-instance method' id='method-M000068'>
+                <a name='M000068'>      </a>
                 <div class='synopsis'>
                   <span class='name'>determine_count</span>
                   <span class='arguments'>(args,ret)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000051-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000068-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000051-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 132</span>&#x000A;132:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">determine_count</span>(<span class="ruby-identifier">args</span>,<span class="ruby-identifier">ret</span>)&#x000A;133:       <span class="ruby-keyword kw">return</span> <span class="ruby-value">1</span> <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@blk</span>.<span class="ruby-identifier">nil?</span>&#x000A;134:       <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">instance_exec</span> <span class="ruby-identifier">args</span>, <span class="ruby-identifier">ret</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">blk</span>&#x000A;135:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000068-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 135</span>&#x000A;135:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">determine_count</span>(<span class="ruby-identifier">args</span>,<span class="ruby-identifier">ret</span>)&#x000A;136:       <span class="ruby-keyword kw">return</span> <span class="ruby-value">1</span> <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@blk</span>.<span class="ruby-identifier">nil?</span>&#x000A;137:       <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">instance_exec</span> <span class="ruby-identifier">args</span>, <span class="ruby-identifier">ret</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">blk</span>&#x000A;138:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='public-instance method' id='method-M000050'>
-                <a name='M000050'>      </a>
+              <div class='public-instance method' id='method-M000067'>
+                <a name='M000067'>      </a>
                 <div class='synopsis'>
                   <span class='name'>generate_packed_method</span>
                   <span class='arguments'>(callblock=false)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000050-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000067-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000050-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 115</span>&#x000A;115:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">generate_packed_method</span>(<span class="ruby-identifier">callblock</span>=<span class="ruby-keyword kw">false</span>)&#x000A;116:       <span class="ruby-node">%Q{&#x000A;117:       @@__benelux_#{@meth}_counter = &#x000A;118:         Benelux.counted_method #{@klass}, :#{@meth}&#x000A;119:       def #{@meth}(*args, &amp;block)&#x000A;120:         Benelux.current_track :global unless Benelux.known_thread?&#x000A;121:         # Get a reference to this MethodCounter instance&#x000A;122:         cmd = Benelux.counted_method #{@klass}, :#{@meth}&#x000A;123:         ret = #{@aliaz}(*args, &amp;block)&#x000A;124:         count = cmd.determine_count(args, ret)&#x000A;125:         Benelux.ld &quot;COUNT(:#{@meth}): \#{count}&quot;&#x000A;126:         Benelux.thread_timeline.add_count :'#{@meth}', count&#x000A;127:         ret&#x000A;128:       end&#x000A;129:       }</span>&#x000A;130:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000067-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 120</span>&#x000A;120:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">generate_packed_method</span>(<span class="ruby-identifier">callblock</span>=<span class="ruby-keyword kw">false</span>)&#x000A;121:       <span class="ruby-node">%Q{&#x000A;122:       def #{@meth}(*args, &amp;block)&#x000A;123:         Benelux.current_track :global unless Benelux.known_thread?&#x000A;124:         # Get a reference to this MethodCounter instance&#x000A;125:         cmd = Benelux.packed_method #{@klass}, :#{@meth}&#x000A;126:         ret = #{@aliaz}(*args, &amp;block)&#x000A;127:         count = cmd.determine_count(args, ret)&#x000A;128:         Benelux.ld &quot;COUNT(:#{@meth}): \#{count}&quot;&#x000A;129:         Benelux.thread_timeline.add_count :'#{@meth}', count&#x000A;130:         ret&#x000A;131:       end&#x000A;132:       }</span>&#x000A;133:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='public-instance method' id='method-M000049'>
-                <a name='M000049'>      </a>
+              <div class='public-instance method' id='method-M000066'>
+                <a name='M000066'>      </a>
                 <div class='synopsis'>
                   <span class='name'>install_method</span>
                   <span class='arguments'>()</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000049-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000066-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000049-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 111</span>&#x000A;111:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">install_method</span>&#x000A;112:       <span class="ruby-ivar">@klass</span>.<span class="ruby-identifier">module_eval</span> <span class="ruby-identifier">generate_packed_method</span>, <span class="ruby-keyword kw">__FILE__</span>, <span class="ruby-value">121</span>&#x000A;113:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000066-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 116</span>&#x000A;116:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">install_method</span>&#x000A;117:       <span class="ruby-ivar">@klass</span>.<span class="ruby-identifier">module_eval</span> <span class="ruby-identifier">generate_packed_method</span>, <span class="ruby-keyword kw">__FILE__</span>, <span class="ruby-value">122</span>&#x000A;118:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
             </div>
