--- a/classes/Selectable.html
+++ b/classes/Selectable.html
@@ -58,14 +58,14 @@
             <h2>Methods</h2>
             <h3>public class</h3>
             <ol>
-              <li><a href="#M000141">included</a></li>
-              <li><a href="#M000137">normalize</a></li>
+              <li><a href="#M000133">included</a></li>
+              <li><a href="#M000129">normalize</a></li>
             </ol>
             <h3>public instance</h3>
             <ol>
-              <li><a href="#M000138">filter</a></li>
-              <li><a href="#M000139">filter!</a></li>
-              <li><a href="#M000140">tags</a></li>
+              <li><a href="#M000130">filter</a></li>
+              <li><a href="#M000131">filter!</a></li>
+              <li><a href="#M000132">tags</a></li>
             </ol>
           </div>
           <div id='section'>
@@ -78,8 +78,8 @@
             </div>
             <div id='methods'>
               <h2>Public class methods</h2>
-              <div class='public-class method' id='method-M000141'>
-                <a name='M000141'>      </a>
+              <div class='public-class method' id='method-M000133'>
+                <a name='M000133'>      </a>
                 <div class='synopsis'>
                   <span class='name'>included</span>
                   <span class='arguments'>(obj)</span>
@@ -91,14 +91,14 @@
                   </p>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000141-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000133-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000141-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 62</span>&#x000A;62:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">included</span>(<span class="ruby-identifier">obj</span>)&#x000A;63:     <span class="ruby-identifier">alias_method</span> <span class="ruby-identifier">:[]</span>, <span class="ruby-identifier">:filter</span> <span class="ruby-keyword kw">unless</span> <span class="ruby-identifier">obj</span>.<span class="ruby-identifier">method_defined?</span> <span class="ruby-identifier">:[]</span>&#x000A;64:   <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000133-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 69</span>&#x000A;69:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">included</span>(<span class="ruby-identifier">obj</span>)&#x000A;70:     <span class="ruby-identifier">alias_method</span> <span class="ruby-identifier">:[]</span>, <span class="ruby-identifier">:filter</span> <span class="ruby-keyword kw">unless</span> <span class="ruby-identifier">obj</span>.<span class="ruby-identifier">method_defined?</span> <span class="ruby-identifier">:[]</span>&#x000A;71:   <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='public-class method' id='method-M000137'>
-                <a name='M000137'>      </a>
+              <div class='public-class method' id='method-M000129'>
+                <a name='M000129'>      </a>
                 <div class='synopsis'>
                   <span class='name'>normalize</span>
                   <span class='arguments'>(*tags)</span>
@@ -109,15 +109,15 @@
                   </p>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000137-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000129-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000137-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 20</span>&#x000A;20:   <span class="ruby-keyword kw">def</span> <span class="ruby-constant">Selectable</span>.<span class="ruby-identifier">normalize</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;21:     <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">flatten!</span>&#x000A;22:     <span class="ruby-identifier">tags</span> = <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">first</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">first</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Hash</span>) <span class="ruby-operator">||</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">first</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Array</span>)&#x000A;23:     <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">is_a?</span>(<span class="ruby-constant">Hash</span>)&#x000A;24:       <span class="ruby-identifier">tags</span> = <span class="ruby-constant">Hash</span>[<span class="ruby-identifier">tags</span>.<span class="ruby-identifier">collect</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">n</span>,<span class="ruby-identifier">v</span><span class="ruby-operator">|</span> [<span class="ruby-identifier">n</span>, <span class="ruby-identifier">v</span>.<span class="ruby-identifier">to_s</span>] }]&#x000A;25:     <span class="ruby-keyword kw">else</span>&#x000A;26:       <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">collect!</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">v</span><span class="ruby-operator">|</span> <span class="ruby-identifier">v</span>.<span class="ruby-identifier">to_s</span> }&#x000A;27:     <span class="ruby-keyword kw">end</span>&#x000A;28:     <span class="ruby-identifier">tags</span>&#x000A;29:   <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000129-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 20</span>&#x000A;20:   <span class="ruby-keyword kw">def</span> <span class="ruby-constant">Selectable</span>.<span class="ruby-identifier">normalize</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;21:     <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">flatten!</span>&#x000A;22:     <span class="ruby-identifier">tags</span> = <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">first</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">first</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Hash</span>) <span class="ruby-operator">||</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">first</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Array</span>)&#x000A;23:     <span class="ruby-comment cmt"># NOTE: The string enforcement is disabled </span>&#x000A;24:     <span class="ruby-comment cmt"># FOR NOW.</span>&#x000A;25:     <span class="ruby-comment cmt">#if tags.is_a?(Hash)</span>&#x000A;26:     <span class="ruby-comment cmt">#  #tmp = {}</span>&#x000A;27:     <span class="ruby-comment cmt">#  #tags.each_pair { |n,v| tmp[n] = v.to_s }</span>&#x000A;28:     <span class="ruby-comment cmt">#  #tags = tmp</span>&#x000A;29:     <span class="ruby-comment cmt">#else</span>&#x000A;30:     <span class="ruby-comment cmt">#  tags.collect! { |v| v.to_s }</span>&#x000A;31:     <span class="ruby-comment cmt">#end</span>&#x000A;32:     <span class="ruby-identifier">tags</span>&#x000A;33:   <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
               <h2>Public instance methods</h2>
-              <div class='public-instance method' id='method-M000138'>
-                <a name='M000138'>      </a>
+              <div class='public-instance method' id='method-M000130'>
+                <a name='M000130'>      </a>
                 <div class='synopsis'>
                   <span class='name'>filter</span>
                   <span class='arguments'>(*tags)</span>
@@ -130,38 +130,43 @@
                   tags in an object have not been initialized, you will see this error:
                   </p>
                   <pre>undefined method `&gt;=' for nil:NilClass</pre>
+                  <p>
+                  It also means you need be aware of the types of objects you are storing as
+                  values. If you store a <a href="Symbol.html">Symbol</a>, you must send a <a
+                  href="Symbol.html">Symbol</a> here.
+                  </p>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000138-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000130-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000138-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 41</span>&#x000A;41:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;42:     <span class="ruby-identifier">tags</span> = <span class="ruby-constant">Selectable</span>.<span class="ruby-identifier">normalize</span> <span class="ruby-identifier">tags</span>&#x000A;43:     <span class="ruby-comment cmt"># select returns an Array. We want a Selectable.</span>&#x000A;44:     <span class="ruby-identifier">items</span> = <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">select</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">obj</span><span class="ruby-operator">|</span> <span class="ruby-identifier">obj</span>.<span class="ruby-identifier">tags</span> <span class="ruby-operator">&gt;=</span> <span class="ruby-identifier">tags</span> }&#x000A;45:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">class</span>.<span class="ruby-identifier">new</span> <span class="ruby-identifier">items</span>&#x000A;46:   <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000130-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 48</span>&#x000A;48:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;49:     <span class="ruby-identifier">tags</span> = <span class="ruby-constant">Selectable</span>.<span class="ruby-identifier">normalize</span> <span class="ruby-identifier">tags</span>&#x000A;50:     <span class="ruby-comment cmt"># select returns an Array. We want a Selectable.</span>&#x000A;51:     <span class="ruby-identifier">items</span> = <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">select</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">obj</span><span class="ruby-operator">|</span> <span class="ruby-identifier">obj</span>.<span class="ruby-identifier">tags</span> <span class="ruby-operator">&gt;=</span> <span class="ruby-identifier">tags</span> }&#x000A;52:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">class</span>.<span class="ruby-identifier">new</span> <span class="ruby-identifier">items</span>&#x000A;53:   <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='public-instance method' id='method-M000139'>
-                <a name='M000139'>      </a>
+              <div class='public-instance method' id='method-M000131'>
+                <a name='M000131'>      </a>
                 <div class='synopsis'>
                   <span class='name'>filter!</span>
                   <span class='arguments'>(*tags)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000139-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000131-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000139-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 49</span>&#x000A;49:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;50:     <span class="ruby-identifier">tags</span> = <span class="ruby-constant">Selectable</span>.<span class="ruby-identifier">normalize</span> <span class="ruby-identifier">tags</span>&#x000A;51:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">delete_if</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">obj</span><span class="ruby-operator">|</span>   <span class="ruby-identifier">obj</span>.<span class="ruby-identifier">tags</span> <span class="ruby-operator">&lt;</span> <span class="ruby-identifier">tags</span> }&#x000A;52:   <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000131-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 56</span>&#x000A;56:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;57:     <span class="ruby-identifier">tags</span> = <span class="ruby-constant">Selectable</span>.<span class="ruby-identifier">normalize</span> <span class="ruby-identifier">tags</span>&#x000A;58:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">delete_if</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">obj</span><span class="ruby-operator">|</span>   <span class="ruby-identifier">obj</span>.<span class="ruby-identifier">tags</span> <span class="ruby-operator">&lt;</span> <span class="ruby-identifier">tags</span> }&#x000A;59:   <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='public-instance method' id='method-M000140'>
-                <a name='M000140'>      </a>
+              <div class='public-instance method' id='method-M000132'>
+                <a name='M000132'>      </a>
                 <div class='synopsis'>
                   <span class='name'>tags</span>
                   <span class='arguments'>()</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000140-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000132-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000140-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 54</span>&#x000A;54:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">tags</span>&#x000A;55:     <span class="ruby-identifier">t</span> = <span class="ruby-constant">Selectable</span><span class="ruby-operator">::</span><span class="ruby-constant">Tags</span>.<span class="ruby-identifier">new</span>&#x000A;56:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">o</span><span class="ruby-operator">|</span> <span class="ruby-identifier">t</span>.<span class="ruby-identifier">merge</span> <span class="ruby-identifier">o</span>.<span class="ruby-identifier">tags</span> }&#x000A;57:     <span class="ruby-identifier">t</span>&#x000A;58:   <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000132-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 61</span>&#x000A;61:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">tags</span>&#x000A;62:     <span class="ruby-identifier">t</span> = <span class="ruby-constant">Selectable</span><span class="ruby-operator">::</span><span class="ruby-constant">Tags</span>.<span class="ruby-identifier">new</span>&#x000A;63:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">o</span><span class="ruby-operator">|</span> <span class="ruby-identifier">t</span>.<span class="ruby-identifier">merge</span> <span class="ruby-identifier">o</span>.<span class="ruby-identifier">tags</span> }&#x000A;64:     <span class="ruby-identifier">t</span>&#x000A;65:   <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
             </div>
