--- a/classes/Symbol.html
+++ b/classes/Symbol.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>: Symbol [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>: Symbol [Benelux: A mad timeline for Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -56,7 +56,7 @@
           <div id='section'>
             <div id='methods'>
               <h2>Public instance methods</h2>
-              <div class='public-instance method' id='method-M000001'>
+              <div class='method public-instance' id='method-M000001'>
                 <a name='M000001'>      </a>
                 <div class='synopsis'>
                   <span class='name'>&lt;=&gt;</span>
