--- a/files/lib/benelux_rb.html
+++ b/files/lib/benelux_rb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: benelux.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>File: benelux.rb [Benelux: A mad timeline for Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-10-21 12:12:49 -0400</span>
+          <span class='datetime'>2010-01-13 16:31:52 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -46,7 +46,6 @@
                 <li>thwait</li>
                 <li>selectable</li>
                 <li>benelux/mark</li>
-                <li>benelux/count</li>
                 <li>benelux/track</li>
                 <li>benelux/range</li>
                 <li>benelux/stats</li>
