--- a/classes/Benelux/MethodCounter.html
+++ b/classes/Benelux/MethodCounter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>: Benelux::MethodCounter [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>: Benelux::MethodCounter [Benelux: A mad timeline for Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -45,9 +45,9 @@
             <h2>Methods</h2>
             <h3>public instance</h3>
             <ol>
-              <li><a href="#M000054">determine_count</a></li>
-              <li><a href="#M000053">generate_packed_method</a></li>
-              <li><a href="#M000052">install_method</a></li>
+              <li><a href="#M000037">determine_count</a></li>
+              <li><a href="#M000036">generate_packed_method</a></li>
+              <li><a href="#M000035">install_method</a></li>
             </ol>
           </div>
           <div id='section'>
@@ -65,43 +65,43 @@
             </div>
             <div id='methods'>
               <h2>Public instance methods</h2>
-              <div class='public-instance method' id='method-M000054'>
-                <a name='M000054'>      </a>
+              <div class='method public-instance' id='method-M000037'>
+                <a name='M000037'>      </a>
                 <div class='synopsis'>
                   <span class='name'>determine_count</span>
                   <span class='arguments'>(args,ret)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000054-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000037-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000054-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 135</span>&#x000A;135:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">determine_count</span>(<span class="ruby-identifier">args</span>,<span class="ruby-identifier">ret</span>)&#x000A;136:       <span class="ruby-keyword kw">return</span> <span class="ruby-value">1</span> <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@blk</span>.<span class="ruby-identifier">nil?</span>&#x000A;137:       <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">instance_exec</span> <span class="ruby-identifier">args</span>, <span class="ruby-identifier">ret</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">blk</span>&#x000A;138:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000037-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 135</span>&#x000A;135:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">determine_count</span>(<span class="ruby-identifier">args</span>,<span class="ruby-identifier">ret</span>)&#x000A;136:       <span class="ruby-keyword kw">return</span> <span class="ruby-value">1</span> <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@blk</span>.<span class="ruby-identifier">nil?</span>&#x000A;137:       <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">instance_exec</span> <span class="ruby-identifier">args</span>, <span class="ruby-identifier">ret</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">blk</span>&#x000A;138:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='public-instance method' id='method-M000053'>
-                <a name='M000053'>      </a>
+              <div class='method public-instance' id='method-M000036'>
+                <a name='M000036'>      </a>
                 <div class='synopsis'>
                   <span class='name'>generate_packed_method</span>
                   <span class='arguments'>(callblock=false)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000053-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000036-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000053-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 120</span>&#x000A;120:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">generate_packed_method</span>(<span class="ruby-identifier">callblock</span>=<span class="ruby-keyword kw">false</span>)&#x000A;121:       <span class="ruby-node">%Q{&#x000A;122:       def #{@meth}(*args, &amp;block)&#x000A;123:         Benelux.current_track :global unless Benelux.known_thread?&#x000A;124:         # Get a reference to this MethodCounter instance&#x000A;125:         cmd = Benelux.packed_method #{@klass}, :#{@meth}&#x000A;126:         ret = #{@aliaz}(*args, &amp;block)&#x000A;127:         count = cmd.determine_count(args, ret)&#x000A;128:         Benelux.ld &quot;COUNT(:#{@meth}): \#{count}&quot;&#x000A;129:         Benelux.thread_timeline.add_count :'#{@meth}', count&#x000A;130:         ret&#x000A;131:       end&#x000A;132:       }</span>&#x000A;133:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000036-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 120</span>&#x000A;120:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">generate_packed_method</span>(<span class="ruby-identifier">callblock</span>=<span class="ruby-keyword kw">false</span>)&#x000A;121:       <span class="ruby-node">%Q{&#x000A;122:       def #{@meth}(*args, &amp;block)&#x000A;123:         Benelux.current_track :global unless Benelux.known_thread?&#x000A;124:         # Get a reference to this MethodCounter instance&#x000A;125:         cmd = Benelux.packed_method #{@klass}, :#{@meth}&#x000A;126:         ret = #{@aliaz}(*args, &amp;block)&#x000A;127:         count = cmd.determine_count(args, ret)&#x000A;128:         #Benelux.ld &quot;COUNT(:#{@meth}): \#{count}&quot;&#x000A;129:         Benelux.thread_timeline.add_count :'#{@meth}', count&#x000A;130:         ret&#x000A;131:       end&#x000A;132:       }</span>&#x000A;133:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='public-instance method' id='method-M000052'>
-                <a name='M000052'>      </a>
+              <div class='method public-instance' id='method-M000035'>
+                <a name='M000035'>      </a>
                 <div class='synopsis'>
                   <span class='name'>install_method</span>
                   <span class='arguments'>()</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000052-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000035-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000052-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 116</span>&#x000A;116:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">install_method</span>&#x000A;117:       <span class="ruby-ivar">@klass</span>.<span class="ruby-identifier">module_eval</span> <span class="ruby-identifier">generate_packed_method</span>, <span class="ruby-keyword kw">__FILE__</span>, <span class="ruby-value">122</span>&#x000A;118:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000035-source'>     <span class="ruby-comment cmt"># File lib/benelux/packer.rb, line 116</span>&#x000A;116:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">install_method</span>&#x000A;117:       <span class="ruby-ivar">@klass</span>.<span class="ruby-identifier">module_eval</span> <span class="ruby-identifier">generate_packed_method</span>, <span class="ruby-keyword kw">__FILE__</span>, <span class="ruby-value">122</span>&#x000A;118:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
             </div>
