--- a/classes/TaggableString.html
+++ b/classes/TaggableString.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: reporter.rb [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>: TaggableString [Benelux: A mad timeline for Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-    <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
+    <link href='../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
         function popupCode(url) {
@@ -23,19 +23,32 @@
     </script>
   </head>
   <body class='page'>
-    <div class='file' id='wrapper'>
+    <div class='class' id='wrapper'>
       <div class='header'>
-        <h1 class='name'>reporter.rb</h1>
-        <div class='paths'>
-          lib/benelux/reporter.rb
-        </div>
-        <div class='last-update'>
-          Last Update:
-          <span class='datetime'>2009-10-13 16:16:00 -0400</span>
+        <h1 class='name'>
+          <span class='type'>Class</span>
+          TaggableString
+        </h1>
+        <ol class='paths'>
+          <li>
+            <a href="../files/lib/selectable_rb.html">lib/selectable.rb</a>
+          </li>
+        </ol>
+        <div class='parent'>
+          Parent:
+          <strong>String</strong>
         </div>
       </div>
       <div id='content'>
         <div id='text'>
+          <div id='context'>
+            <div id='includes'>
+              <h2>Included modules</h2>
+              <ol>
+                <li><a href="Selectable/Object.html">Selectable::Object</a></li>
+              </ol>
+            </div>
+          </div>
           <div id='section'>
           </div>
         </div>
