--- a/classes/Thread.html
+++ b/classes/Thread.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>: Thread [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>: Thread [Benelux: A mad timeline for Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -41,7 +41,30 @@
       </div>
       <div id='content'>
         <div id='text'>
+          <div id='method-list'>
+            <h2>Methods</h2>
+            <h3>public instance</h3>
+            <ol>
+              <li><a href="#M000002">rotate_timeline</a></li>
+            </ol>
+          </div>
           <div id='section'>
+            <div id='methods'>
+              <h2>Public instance methods</h2>
+              <div class='method public-instance' id='method-M000002'>
+                <a name='M000002'>      </a>
+                <div class='synopsis'>
+                  <span class='name'>rotate_timeline</span>
+                  <span class='arguments'>()</span>
+                </div>
+                <div class='source'>
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000002-source'); return false">
+                    [show source]
+                  </a>
+                  <pre id='M000002-source'>    <span class="ruby-comment cmt"># File lib/benelux/mixins/thread.rb, line 8</span>&#x000A; 8:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">rotate_timeline</span>&#x000A; 9:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">rotated_timelines</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span>&#x000A;10:     <span class="ruby-identifier">tags</span> = <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span>.<span class="ruby-identifier">default_tags</span>.<span class="ruby-identifier">clone</span>&#x000A;11:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span> = <span class="ruby-constant">Benelux</span><span class="ruby-operator">::</span><span class="ruby-constant">Timeline</span>.<span class="ruby-identifier">new</span>&#x000A;12:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span>.<span class="ruby-identifier">default_tags</span> = <span class="ruby-identifier">tags</span>&#x000A;13:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span>&#x000A;14:   <span class="ruby-keyword kw">end</span></pre>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
