--- a/files/LICENSE_txt.html
+++ b/files/LICENSE_txt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: LICENSE.txt [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>File: LICENSE.txt [Benelux: A mad timeline for Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-10-09 17:51:49 -0400</span>
+          <span class='datetime'>2009-10-21 12:14:54 -0400</span>
         </div>
       </div>
       <div id='content'>
