--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>Classes [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>Classes [Benelux: A mad timeline for Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <base target='docwin'>
@@ -11,14 +11,14 @@
       <h1>Classes</h1>
       <ol class='classes' id='index-entries'>
         <li><a href="classes/Benelux.html">Benelux</a>
-        <ol><li><a href="classes/Benelux/AlreadyTimed.html"><span class="parent">Benelux::</span>AlreadyTimed</a></li><li><a href="classes/Benelux/BadRecursion.html"><span class="parent">Benelux::</span>BadRecursion</a></li><li><a href="classes/Benelux/BeneluxError.html"><span class="parent">Benelux::</span>BeneluxError</a></li><li><a href="classes/Benelux/Count.html"><span class="parent">Benelux::</span>Count</a></li><li><a href="classes/Benelux/Mark.html"><span class="parent">Benelux::</span>Mark</a></li><li><a href="classes/Benelux/MethodCounter.html"><span class="parent">Benelux::</span>MethodCounter</a></li><li><a href="classes/Benelux/MethodPacker.html"><span class="parent">Benelux::</span>MethodPacker</a>
+        <ol><li><a href="classes/Benelux/AlreadyTimed.html"><span class="parent">Benelux::</span>AlreadyTimed</a></li><li><a href="classes/Benelux/BadRecursion.html"><span class="parent">Benelux::</span>BadRecursion</a></li><li><a href="classes/Benelux/BeneluxError.html"><span class="parent">Benelux::</span>BeneluxError</a></li><li><a href="classes/Benelux/Mark.html"><span class="parent">Benelux::</span>Mark</a></li><li><a href="classes/Benelux/MethodCounter.html"><span class="parent">Benelux::</span>MethodCounter</a></li><li><a href="classes/Benelux/MethodPacker.html"><span class="parent">Benelux::</span>MethodPacker</a>
         <ol><li><a href="classes/Benelux/MethodPacker/InstanceExecHelper.html"><span class="parent">Benelux::MethodPacker::</span>InstanceExecHelper</a></li>
-        </ol></li><li><a href="classes/Benelux/MethodTimer.html"><span class="parent">Benelux::</span>MethodTimer</a></li><li><a href="classes/Benelux/NotSupported.html"><span class="parent">Benelux::</span>NotSupported</a></li><li><a href="classes/Benelux/Range.html"><span class="parent">Benelux::</span>Range</a></li><li><a href="classes/Benelux/Reporter.html"><span class="parent">Benelux::</span>Reporter</a></li><li><a href="classes/Benelux/Stats.html"><span class="parent">Benelux::</span>Stats</a>
+        </ol></li><li><a href="classes/Benelux/MethodTimer.html"><span class="parent">Benelux::</span>MethodTimer</a></li><li><a href="classes/Benelux/NotSupported.html"><span class="parent">Benelux::</span>NotSupported</a></li><li><a href="classes/Benelux/Range.html"><span class="parent">Benelux::</span>Range</a></li><li><a href="classes/Benelux/Stats.html"><span class="parent">Benelux::</span>Stats</a>
         <ol><li><a href="classes/Benelux/Stats/Calculator.html"><span class="parent">Benelux::Stats::</span>Calculator</a></li><li><a href="classes/Benelux/Stats/Group.html"><span class="parent">Benelux::Stats::</span>Group</a></li>
         </ol></li><li><a href="classes/Benelux/Timeline.html"><span class="parent">Benelux::</span>Timeline</a></li><li><a href="classes/Benelux/Track.html"><span class="parent">Benelux::</span>Track</a></li><li><a href="classes/Benelux/UnknownTrack.html"><span class="parent">Benelux::</span>UnknownTrack</a></li>
         </ol></li><li><a href="classes/Selectable.html">Selectable</a>
         <ol><li><a href="classes/Selectable/Object.html"><span class="parent">Selectable::</span>Object</a></li><li><a href="classes/Selectable/SelectableError.html"><span class="parent">Selectable::</span>SelectableError</a></li><li><a href="classes/Selectable/Tags.html"><span class="parent">Selectable::</span>Tags</a></li><li><a href="classes/Selectable/TagsNotInitialized.html"><span class="parent">Selectable::</span>TagsNotInitialized</a></li>
-        </ol></li><li><a href="classes/SelectableArray.html">SelectableArray</a></li><li><a href="classes/SelectableHash.html">SelectableHash</a></li><li><a href="classes/Symbol.html">Symbol</a></li><li><a href="classes/Thread.html">Thread</a></li>
+        </ol></li><li><a href="classes/SelectableArray.html">SelectableArray</a></li><li><a href="classes/SelectableHash.html">SelectableHash</a></li><li><a href="classes/Symbol.html">Symbol</a></li><li><a href="classes/TaggableString.html">TaggableString</a></li><li><a href="classes/Thread.html">Thread</a></li>
       </ol>
     </div>
   </body>
