--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>Files [Benelux: Little freakin' timers for your Ruby codes]</title>
+    <title>Files [Benelux: A mad timeline for Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <base target='docwin'>
@@ -14,13 +14,11 @@
         <li><a href="files/LICENSE_txt.html">LICENSE.txt</a></li>
         <li><a href="files/README_rdoc.html">README.rdoc</a></li>
         <li class='other'><a href="files/lib/benelux_rb.html">lib/benelux.rb</a></li>
-        <li class='other'><a href="files/lib/benelux/count_rb.html">lib/benelux/count.rb</a></li>
         <li class='other'><a href="files/lib/benelux/mark_rb.html">lib/benelux/mark.rb</a></li>
         <li class='other'><a href="files/lib/benelux/mixins/symbol_rb.html">lib/benelux/mixins/symbol.rb</a></li>
         <li class='other'><a href="files/lib/benelux/mixins/thread_rb.html">lib/benelux/mixins/thread.rb</a></li>
         <li class='other'><a href="files/lib/benelux/packer_rb.html">lib/benelux/packer.rb</a></li>
         <li class='other'><a href="files/lib/benelux/range_rb.html">lib/benelux/range.rb</a></li>
-        <li class='other'><a href="files/lib/benelux/reporter_rb.html">lib/benelux/reporter.rb</a></li>
         <li class='other'><a href="files/lib/benelux/stats_rb.html">lib/benelux/stats.rb</a></li>
         <li class='other'><a href="files/lib/benelux/timeline_rb.html">lib/benelux/timeline.rb</a></li>
         <li class='other'><a href="files/lib/benelux/track_rb.html">lib/benelux/track.rb</a></li>
