--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: CHANGES.txt [Benelux: A mad timeline for Ruby codes]</title>
+    <title>File: CHANGES.txt [Benelux: A mad way to time Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-13 12:47:52 -0500</span>
+          <span class='datetime'>2010-01-16 21:11:43 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,14 @@
             <p>
             BENELUX, CHANGES
             </p>
+            <p>
+            #### 0.5.5 (2010-01-16) ###############################
+            </p>
+            <ul>
+            <li>ADDED: <a href="../classes/Benelux.html#M000023">Benelux.bm</a>
+            
+            </li>
+            </ul>
             <p>
             #### 0.5.4 (2010-01-13) ###############################
             </p>
@@ -64,7 +72,7 @@
             #### 0.5.2 (2009-11-02) ###############################
             </p>
             <ul>
-            <li>ADDED: <a href="../classes/Selectable.html#M000119">Selectable#rfilter</a>
+            <li>ADDED: <a href="../classes/Selectable.html#M000124">Selectable#rfilter</a>
             
             </li>
             <li>ADDED: Timeline#messages
