--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>Classes [Benelux: A mad timeline for Ruby codes]</title>
+    <title>Classes [Benelux: A mad way to time Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <base target='docwin'>
@@ -15,7 +15,7 @@
         <ol><li><a href="classes/Benelux/MethodPacker/InstanceExecHelper.html"><span class="parent">Benelux::MethodPacker::</span>InstanceExecHelper</a></li>
         </ol></li><li><a href="classes/Benelux/MethodTimer.html"><span class="parent">Benelux::</span>MethodTimer</a></li><li><a href="classes/Benelux/NotSupported.html"><span class="parent">Benelux::</span>NotSupported</a></li><li><a href="classes/Benelux/Range.html"><span class="parent">Benelux::</span>Range</a></li><li><a href="classes/Benelux/Stats.html"><span class="parent">Benelux::</span>Stats</a>
         <ol><li><a href="classes/Benelux/Stats/Calculator.html"><span class="parent">Benelux::Stats::</span>Calculator</a></li><li><a href="classes/Benelux/Stats/Group.html"><span class="parent">Benelux::Stats::</span>Group</a></li>
-        </ol></li><li><a href="classes/Benelux/Timeline.html"><span class="parent">Benelux::</span>Timeline</a></li><li><a href="classes/Benelux/Track.html"><span class="parent">Benelux::</span>Track</a></li><li><a href="classes/Benelux/UnknownTrack.html"><span class="parent">Benelux::</span>UnknownTrack</a></li>
+        </ol></li><li><a href="classes/Benelux/Timeline.html"><span class="parent">Benelux::</span>Timeline</a></li><li><a href="classes/Benelux/Tms.html"><span class="parent">Benelux::</span>Tms</a></li><li><a href="classes/Benelux/Track.html"><span class="parent">Benelux::</span>Track</a></li><li><a href="classes/Benelux/UnknownTrack.html"><span class="parent">Benelux::</span>UnknownTrack</a></li>
         </ol></li><li><a href="classes/Selectable.html">Selectable</a>
         <ol><li><a href="classes/Selectable/Object.html"><span class="parent">Selectable::</span>Object</a></li><li><a href="classes/Selectable/SelectableError.html"><span class="parent">Selectable::</span>SelectableError</a></li><li><a href="classes/Selectable/Tags.html"><span class="parent">Selectable::</span>Tags</a></li><li><a href="classes/Selectable/TagsNotInitialized.html"><span class="parent">Selectable::</span>TagsNotInitialized</a></li>
         </ol></li><li><a href="classes/SelectableArray.html">SelectableArray</a></li><li><a href="classes/SelectableHash.html">SelectableHash</a></li><li><a href="classes/Symbol.html">Symbol</a></li><li><a href="classes/TaggableString.html">TaggableString</a></li><li><a href="classes/Thread.html">Thread</a></li>
