--- a/classes/Selectable/Object.html
+++ b/classes/Selectable/Object.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>: Selectable::Object [Benelux: A mad timeline for Ruby codes]</title>
+    <title>: Selectable::Object [Benelux: A mad way to time Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -50,14 +50,14 @@
             <h2>Methods</h2>
             <h3>public instance</h3>
             <ol>
-              <li><a href="#M000124">add_tag</a></li>
-              <li><a href="#M000126">add_tag_quick</a></li>
-              <li><a href="#M000123">add_tags</a></li>
-              <li><a href="#M000125">add_tags_quick</a></li>
-              <li><a href="#M000130">init_tags!</a></li>
-              <li><a href="#M000128">remove_tag</a></li>
-              <li><a href="#M000127">remove_tags</a></li>
-              <li><a href="#M000129">tag_values</a></li>
+              <li><a href="#M000129">add_tag</a></li>
+              <li><a href="#M000131">add_tag_quick</a></li>
+              <li><a href="#M000128">add_tags</a></li>
+              <li><a href="#M000130">add_tags_quick</a></li>
+              <li><a href="#M000135">init_tags!</a></li>
+              <li><a href="#M000133">remove_tag</a></li>
+              <li><a href="#M000132">remove_tags</a></li>
+              <li><a href="#M000134">tag_values</a></li>
             </ol>
           </div>
           <div id='section'>
@@ -75,105 +75,105 @@
             </div>
             <div id='methods'>
               <h2>Public instance methods</h2>
-              <div class='method public-instance' id='method-M000124'>
-                <a name='M000124'>      </a>
+              <div class='method public-instance' id='method-M000129'>
+                <a name='M000129'>      </a>
                 <div class='synopsis'>
                   <span class='name'>add_tag</span>
                   <span class='arguments'>(tags)</span>
                 </div>
                 <div class='description'>
                   <p>
-                  Alias for <a href="Object.html#M000123">add_tags</a>
+                  Alias for <a href="Object.html#M000128">add_tags</a>
                   </p>
                 </div>
               </div>
-              <div class='method public-instance' id='method-M000126'>
-                <a name='M000126'>      </a>
+              <div class='method public-instance' id='method-M000131'>
+                <a name='M000131'>      </a>
                 <div class='synopsis'>
                   <span class='name'>add_tag_quick</span>
                   <span class='arguments'>(tags)</span>
                 </div>
                 <div class='description'>
                   <p>
-                  Alias for <a href="Object.html#M000125">add_tags_quick</a>
+                  Alias for <a href="Object.html#M000130">add_tags_quick</a>
                   </p>
                 </div>
               </div>
-              <div class='method public-instance' id='method-M000123'>
-                <a name='M000123'>      </a>
+              <div class='method public-instance' id='method-M000128'>
+                <a name='M000128'>      </a>
                 <div class='synopsis'>
                   <span class='name'>add_tags</span>
                   <span class='arguments'>(tags)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000123-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000128-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000123-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 14</span>&#x000A;14:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">add_tags</span>(<span class="ruby-identifier">tags</span>)&#x000A;15:       <span class="ruby-identifier">init_tags!</span>&#x000A;16:       <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">merge!</span> <span class="ruby-identifier">tags</span>&#x000A;17:     <span class="ruby-keyword kw">end</span></pre>
-                </div>
-              </div>
-              <div class='method public-instance' id='method-M000125'>
-                <a name='M000125'>      </a>
-                <div class='synopsis'>
-                  <span class='name'>add_tags_quick</span>
-                  <span class='arguments'>(tags)</span>
-                </div>
-                <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000125-source'); return false">
-                    [show source]
-                  </a>
-                  <pre id='M000125-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 19</span>&#x000A;19:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">add_tags_quick</span>(<span class="ruby-identifier">tags</span>)&#x000A;20:       <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">merge!</span> <span class="ruby-identifier">tags</span>&#x000A;21:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000128-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 14</span>&#x000A;14:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">add_tags</span>(<span class="ruby-identifier">tags</span>)&#x000A;15:       <span class="ruby-identifier">init_tags!</span>&#x000A;16:       <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">merge!</span> <span class="ruby-identifier">tags</span>&#x000A;17:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
               <div class='method public-instance' id='method-M000130'>
                 <a name='M000130'>      </a>
                 <div class='synopsis'>
-                  <span class='name'>init_tags!</span>
-                  <span class='arguments'>()</span>
+                  <span class='name'>add_tags_quick</span>
+                  <span class='arguments'>(tags)</span>
                 </div>
                 <div class='source'>
                   <a class='source-toggle' href='#' onclick="toggleCode('M000130-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000130-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 37</span>&#x000A;37:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">init_tags!</span>&#x000A;38:       <span class="ruby-ivar">@tags</span> <span class="ruby-operator">||=</span> <span class="ruby-constant">Selectable</span><span class="ruby-operator">::</span><span class="ruby-constant">Tags</span>.<span class="ruby-identifier">new</span>&#x000A;39:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000130-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 19</span>&#x000A;19:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">add_tags_quick</span>(<span class="ruby-identifier">tags</span>)&#x000A;20:       <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">merge!</span> <span class="ruby-identifier">tags</span>&#x000A;21:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='method public-instance' id='method-M000128'>
-                <a name='M000128'>      </a>
+              <div class='method public-instance' id='method-M000135'>
+                <a name='M000135'>      </a>
+                <div class='synopsis'>
+                  <span class='name'>init_tags!</span>
+                  <span class='arguments'>()</span>
+                </div>
+                <div class='source'>
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000135-source'); return false">
+                    [show source]
+                  </a>
+                  <pre id='M000135-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 37</span>&#x000A;37:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">init_tags!</span>&#x000A;38:       <span class="ruby-ivar">@tags</span> <span class="ruby-operator">||=</span> <span class="ruby-constant">Selectable</span><span class="ruby-operator">::</span><span class="ruby-constant">Tags</span>.<span class="ruby-identifier">new</span>&#x000A;39:     <span class="ruby-keyword kw">end</span></pre>
+                </div>
+              </div>
+              <div class='method public-instance' id='method-M000133'>
+                <a name='M000133'>      </a>
                 <div class='synopsis'>
                   <span class='name'>remove_tag</span>
                   <span class='arguments'>(*tags)</span>
                 </div>
                 <div class='description'>
                   <p>
-                  Alias for <a href="Object.html#M000127">remove_tags</a>
+                  Alias for <a href="Object.html#M000132">remove_tags</a>
                   </p>
                 </div>
               </div>
-              <div class='method public-instance' id='method-M000127'>
-                <a name='M000127'>      </a>
+              <div class='method public-instance' id='method-M000132'>
+                <a name='M000132'>      </a>
                 <div class='synopsis'>
                   <span class='name'>remove_tags</span>
                   <span class='arguments'>(*tags)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000127-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000132-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000127-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 23</span>&#x000A;23:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">remove_tags</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;24:       <span class="ruby-identifier">raise</span> <span class="ruby-constant">TagsNotInitialized</span> <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">nil?</span>&#x000A;25:       <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">flatten!</span>&#x000A;26:       <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">delete_if</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">n</span>,<span class="ruby-identifier">v</span><span class="ruby-operator">|</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">member?</span>(<span class="ruby-identifier">n</span>) }&#x000A;27:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000132-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 23</span>&#x000A;23:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">remove_tags</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;24:       <span class="ruby-identifier">raise</span> <span class="ruby-constant">TagsNotInitialized</span> <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">nil?</span>&#x000A;25:       <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">flatten!</span>&#x000A;26:       <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">delete_if</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">n</span>,<span class="ruby-identifier">v</span><span class="ruby-operator">|</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">member?</span>(<span class="ruby-identifier">n</span>) }&#x000A;27:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='method public-instance' id='method-M000129'>
-                <a name='M000129'>      </a>
+              <div class='method public-instance' id='method-M000134'>
+                <a name='M000134'>      </a>
                 <div class='synopsis'>
                   <span class='name'>tag_values</span>
                   <span class='arguments'>(*tags)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000129-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000134-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000129-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 29</span>&#x000A;29:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">tag_values</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;30:       <span class="ruby-identifier">raise</span> <span class="ruby-constant">TagsNotInitialized</span> <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">nil?</span>&#x000A;31:       <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">flatten!</span>&#x000A;32:       <span class="ruby-identifier">ret</span> = <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">collect</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">n</span>,<span class="ruby-identifier">v</span><span class="ruby-operator">|</span> &#x000A;33:         <span class="ruby-identifier">v</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">empty?</span> <span class="ruby-operator">||</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">member?</span>(<span class="ruby-identifier">n</span>) &#x000A;34:       }.<span class="ruby-identifier">compact</span>&#x000A;35:       <span class="ruby-identifier">ret</span>&#x000A;36:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000134-source'>    <span class="ruby-comment cmt"># File lib/selectable/object.rb, line 29</span>&#x000A;29:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">tag_values</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;30:       <span class="ruby-identifier">raise</span> <span class="ruby-constant">TagsNotInitialized</span> <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">nil?</span>&#x000A;31:       <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">flatten!</span>&#x000A;32:       <span class="ruby-identifier">ret</span> = <span class="ruby-ivar">@tags</span>.<span class="ruby-identifier">collect</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">n</span>,<span class="ruby-identifier">v</span><span class="ruby-operator">|</span> &#x000A;33:         <span class="ruby-identifier">v</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">empty?</span> <span class="ruby-operator">||</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">member?</span>(<span class="ruby-identifier">n</span>) &#x000A;34:       }.<span class="ruby-identifier">compact</span>&#x000A;35:       <span class="ruby-identifier">ret</span>&#x000A;36:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
             </div>
