--- a/files/lib/benelux_rb.html
+++ b/files/lib/benelux_rb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: benelux.rb [Benelux: A mad timeline for Ruby codes]</title>
+    <title>File: benelux.rb [Benelux: A mad way to time Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-13 16:31:52 -0500</span>
+          <span class='datetime'>2010-01-16 21:17:05 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -53,6 +53,7 @@
                 <li>benelux/timeline</li>
                 <li>benelux/mixins/thread</li>
                 <li>benelux/mixins/symbol</li>
+                <li>benchmark</li>
               </ol>
             </div>
           </div>
