--- a/files/lib/selectable/object_rb.html
+++ b/files/lib/selectable/object_rb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: object.rb [Benelux: A mad timeline for Ruby codes]</title>
+    <title>File: object.rb [Benelux: A mad way to time Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-10-21 12:14:55 -0400</span>
+          <span class='datetime'>2010-01-13 16:34:00 -0500</span>
         </div>
       </div>
       <div id='content'>
