--- a/files/README_rdoc.html
+++ b/files/README_rdoc.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-16 21:17:11 -0500</span>
+          <span class='datetime'>2010-01-17 13:49:36 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -43,6 +43,9 @@
             </p>
             <h2>Features</h2>
             <ul>
+            <li>A replacement for Benchmark.measure
+            
+            </li>
             <li>Create timers for any Ruby method
             
             </li>
@@ -57,7 +60,7 @@
             </li>
             </ul>
             <h2>Example</h2>
-            <pre>require 'benelux'&#x000A;&#x000A;# Similar to Benchmark::Tms with the addition of&#x000A;# standard deviation, mean value, and total, for&#x000A;# each of the times.&#x000A;tms = Benelux.bm(1000000, 5) do&#x000A;  rand&#x000A;end&#x000A;&#x000A;tms.samples              # =&gt; 5&#x000A;tms.real                 # =&gt; 0.45&#x000A;tms.real.sd              # =&gt; 0.04&#x000A;tms.utime                # =&gt; 0.44&#x000A;tms.utime.sd             # =&gt; 0.02</pre>
+            <pre>require 'benelux'&#x000A;&#x000A;# Similar to Benchmark.measure but you specify the&#x000A;# number of times to run the block and the number&#x000A;# repetitions.&#x000A;tms = Benelux.bm(1000000, 5) do&#x000A;  rand&#x000A;end&#x000A;&#x000A;# Similar to Benchmark::Tms with the addition of&#x000A;# standard deviation, mean value, and total, for&#x000A;# each of the times.&#x000A;tms.samples              # =&gt; 5&#x000A;tms.real                 # =&gt; 0.45&#x000A;tms.real.sd              # =&gt; 0.04&#x000A;tms.utime                # =&gt; 0.44&#x000A;tms.utime.sd             # =&gt; 0.02</pre>
             <h2>Installation</h2>
             <p>
             Get it in one of the following ways:
