--- a/classes/Symbol.html
+++ b/classes/Symbol.html
@@ -31,12 +31,12 @@
         </h1>
         <ol class='paths'>
           <li>
-            <a href="../files/lib/benelux/mixins/symbol_rb.html">lib/benelux/mixins/symbol.rb</a>
+            <a href="../files/lib/benelux/mixins_rb.html">lib/benelux/mixins.rb</a>
           </li>
         </ol>
         <div class='parent'>
           Parent:
-          <strong>Object</strong>
+          <strong><a href="Object.html">Object</a></strong>
         </div>
       </div>
       <div id='content'>
@@ -50,23 +50,23 @@
             <h2>Methods</h2>
             <h3>public instance</h3>
             <ol>
-              <li><a href="#M000001">&lt;=&gt;</a></li>
+              <li><a href="#M000003">&lt;=&gt;</a></li>
             </ol>
           </div>
           <div id='section'>
             <div id='methods'>
               <h2>Public instance methods</h2>
-              <div class='method public-instance' id='method-M000001'>
-                <a name='M000001'>      </a>
+              <div class='method public-instance' id='method-M000003'>
+                <a name='M000003'>      </a>
                 <div class='synopsis'>
                   <span class='name'>&lt;=&gt;</span>
                   <span class='arguments'>(other)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000001-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000003-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000001-source'>   <span class="ruby-comment cmt"># File lib/benelux/mixins/symbol.rb, line 4</span>&#x000A;4:     <span class="ruby-keyword kw">def</span> <span class="ruby-operator">&lt;=&gt;</span>(<span class="ruby-identifier">other</span>)&#x000A;5:       <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">to_s</span> <span class="ruby-operator">&lt;=&gt;</span> <span class="ruby-identifier">other</span>.<span class="ruby-identifier">to_s</span>&#x000A;6:     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000003-source'>    <span class="ruby-comment cmt"># File lib/benelux/mixins.rb, line 16</span>&#x000A;16:     <span class="ruby-keyword kw">def</span> <span class="ruby-operator">&lt;=&gt;</span>(<span class="ruby-identifier">other</span>)&#x000A;17:       <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">to_s</span> <span class="ruby-operator">&lt;=&gt;</span> <span class="ruby-identifier">other</span>.<span class="ruby-identifier">to_s</span>&#x000A;18:     <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
             </div>
