--- a/files/lib/benelux/mixins_rb.html
+++ b/files/lib/benelux/mixins_rb.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>File: symbol.rb [Benelux: A mad way to time Ruby codes]</title>
+    <title>File: mixins.rb [Benelux: A mad way to time Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-    <link href='../../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
+    <link href='../../../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
       //<![CDATA[
         function popupCode(url) {
@@ -25,22 +25,17 @@
   <body class='page'>
     <div class='file' id='wrapper'>
       <div class='header'>
-        <h1 class='name'>symbol.rb</h1>
+        <h1 class='name'>mixins.rb</h1>
         <div class='paths'>
-          lib/benelux/mixins/symbol.rb
+          lib/benelux/mixins.rb
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-01-16 21:18:13 -0500</span>
+          <span class='datetime'>2010-02-20 10:28:47 -0500</span>
         </div>
       </div>
       <div id='content'>
         <div id='text'>
-          <div id='description'>
-            <p>
-            if RUBY_VERSION =~ /1.8/
-            </p>
-          </div>
           <div id='section'>
           </div>
         </div>
