--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -15,8 +15,7 @@
         <li><a href="files/README_rdoc.html">README.rdoc</a></li>
         <li class='other'><a href="files/lib/benelux_rb.html">lib/benelux.rb</a></li>
         <li class='other'><a href="files/lib/benelux/mark_rb.html">lib/benelux/mark.rb</a></li>
-        <li class='other'><a href="files/lib/benelux/mixins/symbol_rb.html">lib/benelux/mixins/symbol.rb</a></li>
-        <li class='other'><a href="files/lib/benelux/mixins/thread_rb.html">lib/benelux/mixins/thread.rb</a></li>
+        <li class='other'><a href="files/lib/benelux/mixins_rb.html">lib/benelux/mixins.rb</a></li>
         <li class='other'><a href="files/lib/benelux/packer_rb.html">lib/benelux/packer.rb</a></li>
         <li class='other'><a href="files/lib/benelux/range_rb.html">lib/benelux/range.rb</a></li>
         <li class='other'><a href="files/lib/benelux/stats_rb.html">lib/benelux/stats.rb</a></li>
