--- a/classes/Object.html
+++ b/classes/Object.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
   <head>
-    <title>: Thread [Benelux: A mad way to time Ruby codes]</title>
+    <title>: Object [Benelux: A mad way to time Ruby codes]</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='../rdoc-style.css' media='screen' rel='stylesheet' type='text/css'>
     <script type='text/javascript'>
@@ -27,7 +27,7 @@
       <div class='header'>
         <h1 class='name'>
           <span class='type'>Class</span>
-          Thread
+          Object
         </h1>
         <ol class='paths'>
           <li>
@@ -41,32 +41,40 @@
       </div>
       <div id='content'>
         <div id='text'>
-          <div id='description'>
-            <p>
-            end
-            </p>
-          </div>
           <div id='method-list'>
             <h2>Methods</h2>
             <h3>public instance</h3>
             <ol>
-              <li><a href="#M000004">rotate_timeline</a></li>
+              <li><a href="#M000001">hex_object_id</a></li>
+              <li><a href="#M000002">hexoid</a></li>
             </ol>
           </div>
           <div id='section'>
             <div id='methods'>
               <h2>Public instance methods</h2>
-              <div class='method public-instance' id='method-M000004'>
-                <a name='M000004'>      </a>
+              <div class='method public-instance' id='method-M000001'>
+                <a name='M000001'>      </a>
                 <div class='synopsis'>
-                  <span class='name'>rotate_timeline</span>
+                  <span class='name'>hex_object_id</span>
                   <span class='arguments'>()</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000004-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000001-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000004-source'>    <span class="ruby-comment cmt"># File lib/benelux/mixins.rb, line 29</span>&#x000A;29:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">rotate_timeline</span>&#x000A;30:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">rotated_timelines</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span>&#x000A;31:     <span class="ruby-identifier">tags</span> = <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span>.<span class="ruby-identifier">default_tags</span>.<span class="ruby-identifier">clone</span>&#x000A;32:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span> = <span class="ruby-constant">Benelux</span><span class="ruby-operator">::</span><span class="ruby-constant">Timeline</span>.<span class="ruby-identifier">new</span>&#x000A;33:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span>.<span class="ruby-identifier">default_tags</span> = <span class="ruby-identifier">tags</span>&#x000A;34:     <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">timeline</span>&#x000A;35:   <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000001-source'>   <span class="ruby-comment cmt"># File lib/benelux/mixins.rb, line 5</span>&#x000A;5:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">hex_object_id</span>&#x000A;6:     <span class="ruby-identifier">prefix</span> = <span class="ruby-constant">RUBY_VERSION</span> <span class="ruby-operator">&gt;=</span> <span class="ruby-value str">'1.9'</span> <span class="ruby-operator">?</span> <span class="ruby-value str">'0x00000'</span> <span class="ruby-operator">:</span> <span class="ruby-value str">'0x'</span>&#x000A;7:     <span class="ruby-value str">&quot;%s%x&quot;</span> <span class="ruby-operator">%</span> [<span class="ruby-identifier">prefix</span>, (<span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">object_id</span>.<span class="ruby-identifier">abs</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-value">1</span>)]&#x000A;8:   <span class="ruby-keyword kw">end</span></pre>
+                </div>
+              </div>
+              <div class='method public-instance' id='method-M000002'>
+                <a name='M000002'>      </a>
+                <div class='synopsis'>
+                  <span class='name'>hexoid</span>
+                  <span class='arguments'>()</span>
+                </div>
+                <div class='description'>
+                  <p>
+                  Alias for <a href="Object.html#M000001">hex_object_id</a>
+                  </p>
                 </div>
               </div>
             </div>
