--- a/files/lib/benelux_rb.html
+++ b/files/lib/benelux_rb.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-02-10 15:43:42 -0500</span>
+          <span class='datetime'>2010-02-20 10:29:10 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -41,7 +41,6 @@
               <h2>Required files</h2>
               <ol>
                 <li>attic</li>
-                <li>hexoid</li>
                 <li>thread</li>
                 <li>thwait</li>
                 <li>selectable</li>
@@ -49,10 +48,9 @@
                 <li>benelux/track</li>
                 <li>benelux/range</li>
                 <li>benelux/stats</li>
+                <li>benelux/mixins</li>
                 <li>benelux/packer</li>
                 <li>benelux/timeline</li>
-                <li>benelux/mixins/thread</li>
-                <li>benelux/mixins/symbol</li>
                 <li>benchmark</li>
               </ol>
             </div>
