--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-02-20 10:29:40 -0500</span>
+          <span class='datetime'>2010-03-05 20:41:34 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,18 @@
             <p>
             BENELUX, CHANGES
             </p>
+            <p>
+            #### 0.5.8 (2010-03-05) ###############################
+            </p>
+            <ul>
+            <li>CHANGE: Added sum and sumsq to <a
+            href="../classes/Benelux/Stats/Calculator.html#M000095">Benelux::Stats::Calculator#to_hash</a>
+            
+            </li>
+            <li>ADDED: Support for timer and counter aliases
+            
+            </li>
+            </ul>
             <p>
             #### 0.5.7 (2010-02-20) ###############################
             </p>
